# frescobaldi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ChangeLog  Compo Piano  Frescobaldi install.txt  Frescobaldi.pyproj  INSTALL  INSTALL.md  LICENSE  MANIFEST.in  Makefile  NEWS  PACKAGES.md  README  README-development  README-translations  README.md  THANKS  TODO  TRANSLATIONS.md  credits.md  dddd.py  de.po  export-help.py  freeze.py  frescobaldi  frescobaldi-postinstall.py  frescobaldi-wininst.py  frescobaldi-wininst.xcf  frescobaldi.1  frescobaldi.desktop  frescobaldi.iss  frescobaldi.pot  ly  pyproject.toml  pytest.ini  setup.cfg  setup.py  tests.sh  (+3 more)
.github/ISSUE_TEMPLATE/: new-issue.md
.github/workflows/: ci.yml  flatpak.yml  lint.yml  release.yml  tests.yml
Frescobaldi302/: Frescobaldi1.pyproj
Frescobaldi_VS2017/: Frescobaldi1.pyproj  Frescobaldi1.sln
frescobaldi/: __main__.py  about.py  actioncollection.py  app.py  appinfo.py  backup.py  browseriface.py  cachedproperty.py  checks.py  contextmenu.py  convert_ly.py  copy2image.py  cursorkeys.py  cursortools.py  debug.py  debuginfo.py  document.py  documentactions.py  documentcontextmenu.py  documentinfo.py  documentmenu.py  documentstructure.py  documenttooltip.py  documenttree.py  editinplace.py  exception.py  externalcommand.py  fileinfo.py  fileprinter.py  folding.py  helpers.py  highlighter.py  historymanager.py  hyphenator.py  hyphendialog.py  indent.py  inputdialog.py  lasptyqu.py  lilypondinfo.py  listmodel.py  (+37 more)
frescobaldi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frescobaldi/autocomplete/: __init__.py  analyzer.py  completer.py  completiondata.py  util.py
frescobaldi/docbrowser/: __init__.py  sourceviewer.py
frescobaldi/doclist/: __init__.py  widget.py
frescobaldi/engrave/: __init__.py  autocompile.py  custom.py  lytools.py
frescobaldi/extensions/: __init__.py  actions.py  panel.py  settings.py  widget.py
frescobaldi/externalchanges/: widget.py
frescobaldi/file_import/: abc.py  midi.py  musicxml.py  toly_dialog.py
frescobaldi/fonts/: __init__.py  dialog.py  musicfonts.py  oldfontsdialog.py  textfonts.py
frescobaldi/gadgets/: __init__.py  arbitraryhighlighter.py  borderlayout.py  cursorkeys.py  indenter.py  matcher.py  toolboxwheeler.py  wordboundary.py
frescobaldi/hyphdicts/: README  README_hyph_hu_HU.txt  README_hyph_nl_NL.txt  __init__.py  hyph_de_DE.dic  hyph_ga_IE.dic  hyph_hu.dic  hyph_is_IS.dic
frescobaldi/i18n/: __init__.py  qtranslator.py  setup.py
frescobaldi/icons/: __init__.py  change_theme_eventhandler.py  org.frescobaldi.Frescobaldi.icns  text-x-included-lilypond.icns  text-x-lilypond.icns
frescobaldi/install/: __init__.py  update.py
frescobaldi/job/: __init__.py  attributes.py  lilypond.py  queue.py
frescobaldi/language_names/: generate.py
frescobaldi/layoutcontrol/: display-grob-names.ily  info-paper-columns.ily  lilypond-version-predicates.ily  widget.py
frescobaldi/lilydoc/: documentation.py  manager.py  manual.py  network.py
frescobaldi/logtool/: errors.py  logwidget.py
frescobaldi/macos/: change_theme_eventhandler.py  file_open_eventhandler.py  globalmenu.py  icon_drag_eventhandler.py  setup.py
frescobaldi/midifile/: event.py  output.py  parser.py  player.py  song.py
frescobaldi/midiinput/: __init__.py  elements.py  tool.py  widget.py
frescobaldi/miditool/: midifiles.py  widget.py
frescobaldi/musicview/: __init__.py  pointandclick.py  widget.py
frescobaldi/objecteditor/: defineoffset.py  widget.py
frescobaldi/pitch/: __init__.py  dialog.py  pitch.py
frescobaldi/portmidi/: __init__.py  ctypes_pypm.py  pm_ctypes.py
frescobaldi/preferences/: __init__.py  documentation.py  editor.py  extensions.py  fontscolors.py  general.py  helpers.py  import_export.py  lilypond.py  midi.py  musicviewers.py  paths.py  shortcuts.py  tools.py
frescobaldi/qmidi/: player.py
frescobaldi/quickinsert/: articulations.py  barlines.py  buttongroup.py  dynamics.py  spanners.py  tool.py  widget.py
frescobaldi/remote/: __init__.py  api.py
frescobaldi/rest/: rest.py
frescobaldi/rhythm/: rhythm.py
frescobaldi/scorewiz/: Makefile  build.py  dialog.py  header.py  preview.py  score.py  scoreproperties.py  settings.py
frescobaldi_app/: __init__.py  __main__.py  about.py  actioncollection.py  actioncollectionmanager.py  app.py  appinfo.py  arrowkeys.py  backup.py  bookmarkmanager.py  bookmarks.py  browseriface.py  bugreport.py  cachedproperty.py  checks.py  colorize.py  completionmodel.py  contextmenu.py  convert_ly.py  copy2image.py  credits.py  cursordiff.py  cursorkeys.py  cursortools.py  cut_assign.py  debug.py  debuginfo.py  debuginfo.py.orig  definition.py  document.py  documentactions.py  documentcontextmenu.py  documenticon.py  documentinfo.py  documentmenu.py  documentstructure.py  documenttooltip.py  documenttree.py  documentwatcher.py  editinplace.py  (+101 more)
i18n/: Makefile  frescobaldi.pot  md2pot.py  messages.py  mo-gen.py  mofile.py  molint.py  po-update.py  update-pot.py  userguide.pot
icons/: __init__.py
linux/: Makefile  org.frescobaldi.Frescobaldi.desktop.in  org.frescobaldi.Frescobaldi.metainfo.xml.in
ly/: __init__.py  __main__.py  barcheck.py  colorize.py  cursortools.py  docinfo.py  document.py  dom.py  duration.py  etreeutil.py  indent.py  node.py  pkginfo.py  reformat.py  rests.py  rhythm.py  slexer.py  util.py  words.py
macos/: build-dmg.sh  mac-app.py  setup.py
macosx/: build-dmg.sh  mac-app.py  patch-PyQt5-uic.diff
preferences/: __init__.py
python-ly/: ChangeLog  INSTALL.md  MANIFEST.in  README  README.md  ly  setup.py  src
qpageview/: __init__.py  backgroundjob.py  cache.py  constants.py  cupsprinter.py  diff.py  document.py  export.py  highlight.py  image.py  imageview.py  layout.py  link.py  locking.py  magnifier.py  multipage.py  page.py  pkginfo.py  poppler.py  printing.py  rectangles.py  render.py  rubberband.py  scrollarea.py  selector.py  shadow.py  sidebarview.py  svg.py  util.py  view.py  viewactions.py  widgetoverlay.py
windows/: freeze.py  frescobaldi-wininst.py  frescobaldi.nsi  frescobaldi.wxs
(+1136 files in other folders)
