[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frescobaldi"
description = "LilyPond Music Editor"
authors = [{name = "Wilbert Berendsen", email = "info@frescobaldi.org"}]
maintainers = [{name = "Wilbert Berendsen", email = "info@frescobaldi.org"}]
license = {text = "GPL-2.0-or-later"}
requires-python = ">=3.8"
# Do not add pygame dependency
dependencies = [
  "pyqt6>=6.6",
  "pyqt6-webengine",
  "python-ly >= 0.9.5",
  "qpageview>=1.0.1"
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    # Natural Language :: Chinese (Hong Kong) is not yet accepted by pypi
    #"Natural Language :: Chinese (Hong Kong)",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: Chinese (Traditional)",
    "Natural Language :: Czech",
    "Natural Language :: Dutch",
    "Natural Language :: English",
    "Natural Language :: French",
    "Natural Language :: Galician",
    "Natural Language :: German",
    "Natural Language :: Italian",
    "Natural Language :: Japanese",
    "Natural Language :: Korean",
    "Natural Language :: Polish",
    "Natural Language :: Portuguese (Brazilian)",
    "Natural Language :: Russian",
    "Natural Language :: Spanish",
    "Natural Language :: Turkish",
    "Natural Language :: Ukrainian",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Editors",
]

[project.readme]
# Shorter version of the main README.md, for PyPI (also in appinfo.py).
text = """Frescobaldi is an advanced text editor to edit LilyPond sheet
music files. Features include an integrated PDF preview and a powerful Score Wizard."""
content-type = "text/plain"

[project.urls]
Homepage = "https://frescobaldi.org"
Repository = "https://github.com/frescobaldi/frescobaldi"

[project.scripts]
frescobaldi = "frescobaldi.__main__:main"

[tool.hatch.version]
path = "frescobaldi/appinfo.py"
pattern = "version = \"(?P<version>.*)\""

[tool.hatch.build]
# Autogenerated files which must be included in sdists. Hatch
# excludes these by default because they are mentioned in .gitignore.
artifacts = [
  "*.mo",
  "linux/org.frescobaldi.Frescobaldi.desktop",
  "linux/org.frescobaldi.Frescobaldi.metainfo.xml",
]

[tool.briefcase]
project_name = "frescobaldi"
bundle = "org.frescobaldi"
# Briefcase does not support dynamic version yet.
# https://github.com/beeware/briefcase/issues/474
version = "4.0.4.dev1"
requires = [
    "PyQt6==6.9.0",
    "PyQt6-Qt6==6.9.0",
    "PyQt6-sip==13.10.0",
    "PyQt6-WebEngine==6.9.0",
    "PyQt6-WebEngine-Qt6==6.9.0",
    "python-ly==0.9.9",
    "qpageview==1.0.1",
    "pygame-ce==2.5.5"
]

[tool.briefcase.app.frescobaldi]
formal_name = "Frescobaldi"
description = "Write LilyPond music sheets"
long_description = "Frescobaldi is an advanced text editor to edit LilyPond sheet music files. It aims to be powerful, yet lightweight and easy to use."
sources = ['frescobaldi']
icon = "frescobaldi/icons/org.frescobaldi.Frescobaldi"

[tool.briefcase.app.frescobaldi.windows]
use_full_install_path = false

[tool.briefcase.app.frescobaldi.document_type.ly]
description = "LilyPond file"
extension = "ly"
icon = "frescobaldi/icons/org.frescobaldi.Frescobaldi"
url = "https://lilypond.org/"

[tool.briefcase.app.frescobaldi.document_type.ily]
description = "LilyPond included file"
extension = "ily"
icon = "frescobaldi/icons/org.frescobaldi.Frescobaldi"
url = "https://lilypond.org/"

[tool.ruff]
# _ is currently added to builtins, so ruff can't find where it's defined.
# We may remove this line when we switch to gettext standard library (#1285).
builtins = ["_"]
